--- a/views/move/new.ejs
+++ b/views/move/new.ejs
@@ -28,12 +28,14 @@
                     <input type="text" name="description" placeholder="Description of Move">
                     <input type="text" name="points" placeholder="Move Points">
                     <input type="text" name="img" placeholder="Image of Move">
-                    Learned: <input type="checkbox" name="learned"/>
-                    <div class="add-btn">
-                        <input type="submit" value="Add" class="add-btn">
-                        </form>
-                    </div>
+                    <label for="completed">Learned:</label>
+                    <input type="checkbox" id="completed" name="learned" class="checkbox"/>
+                    
+                <div class="add-btn">
+                    <input type="submit" value="Add" class="add-btn">
+                  </div>
                 </div> 
+            </form>
     </div>        
 </body>
 </html>
