--- a/views/move/index.ejs
+++ b/views/move/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BJJ Moves</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/head.css">
 </head>
 <body>
     <div class="welcome-back-title">
@@ -27,7 +27,7 @@
               <p class="points">Points: <%= move.points %></p>
             </div>
             <div class="img-container play-on-hover">
-              <img class="static" src="<%= move.img %>">
+              <img class="index-image" src="<%= move.img %>">
             </div>
           </div>
         <% }) %>
