--- a/views/move/show.ejs
+++ b/views/move/show.ejs
@@ -5,47 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Show Moves</title>
+    <link rel="stylesheet" href="/show.css">
+     <!-- Linking Font Awesome -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="back-btn">
+        <a href="/move">
+          <span class="back-icon">
+            <i class="fa-solid fa-circle-arrow-left"></i>
+          </span>
+        </a>
+      </div>
+
+      <div class="edit-btn">
+          <a href="/move/<%= move._id %>/edit">
+              <span class="edit-icon">
+                <i class="fa-regular fa-pen-to-square" style="color: #f5f5f5;"></i>
+              </span>
+          </a>
+      </div>
+
+      <div class="delete-button">
+        <form action="/move/<%= move._id %>?_method=delete" method="POST">
+            <button type="submit">
+                <i class="fas fa-trash" style="color: #f5f5f5;"></i>
+            </button>
+        </form>    
+    </div>
+    
+
     <div class="banner">
         <h1>All Moves</h1>
     </div>
 
-    <div class="button-container">
-        <a href="/move"><button>Back</button></a>
-        <a href="/move/<%= move._id %>/edit"><button>Edit</button></a>
-    </div>
 
-    <div class="delete-button">
-        <form action="/move/<%= move._id %>?_method=delete" method="POST">
-        <input type="submit" value="Delete">
-        </form>    
-    </div>
-
-    <div class="name">
-        <p>Move: <%= move.name %></p>
-    </div>
-
-    <div class="column">
-        <div class="type">
-            <p>Type: <%= move.type %></p>
-        </div>
-    </div>
-
-    <div class="description">
-        <p>Description: <%= move.description %></p>
-    </div>
-
-    <div class="points">
-        <p>Points: <%= move.points %></p>
-    </div>
-
-    <div class="learned">
-        <p>Learned: <%= move.completed ? 'Yes' : 'No' %></p>
-    </div>
-
-    <div class="img">
-        <img src="<%= move.img %>">
+    <div class="show-container">
+        <div class="name"><p>Move: <%= move.name %></p></div>
+        <div class="type"><p>Type: <%= move.type %></p></div>
+        <div class="description"><p>Description: <%= move.description %></p></div>
+        <div class="points"><p>Points: <%= move.points %></p></div>
+        <div class="learned"><p>Learned: <%= move.completed ? 'Yes' : 'No' %></p></div>
+        <div class="img"><img src="<%= move.img %>"></div>
     </div>
 </body>
 </html>
