--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <br>
         <br>
         <div class="btn-container">
-            <a href="/user/signup"><button class="sign-up-button">Sign Up</button></a>
+            <a href="/user/signup"><button class="signup-button">Sign Up</button></a>
             <a href="/user/login"><button class="login-button">Login</button></a>
         </div>
     </body>
