--- a/views/move/partials/head.ejs
+++ b/views/move/partials/head.ejs
@@ -24,7 +24,7 @@
                 <button class="dropbtn">Positions
                     <i class="fa fa-caret-down"></i>
                 </button>
-                <div class="dropdown-content">
+                <div class="dropdown-content links">
                     <a href="#">Link 1</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
