--- a/public/new.css
+++ b/public/new.css
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    height: 120vh;
     margin: 0;
 }
 
@@ -20,7 +20,7 @@ h1 {
     border-radius: 10px;
     margin: 0 auto;
     width: 50%;
-    height: 55vh;
+    height: 65vh;
 }
   
 .form-inputs {
@@ -40,7 +40,7 @@ input[type="text"] {
     border-radius: 5px;
     border: 1px solid #383838;
     background-color: whitesmoke;
-    color: #9b9898;
+    color: #010101;
 }
 
 input[type="checkbox"] {
