--- a/public/signup.css
+++ b/public/signup.css
@@ -56,7 +56,7 @@ input[name="password"] {
     border-radius: 5px;
     border: 1px solid #383838;
     background-color: whitesmoke;
-    color: #9b9898;
+    color: black;
 }
 
 .input-wrapper {
