--- a/views/move/index.ejs
+++ b/views/move/index.ejs
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BJJ Moves</title>
-    <link rel="stylesheet" href="/head.css">
 </head>
 <body>
     <div class="welcome-back-title">
@@ -26,7 +25,7 @@
               <p class="description">Description: <%= move.description %></p>
               <p class="points">Points: <%= move.points %></p>
             </div>
-            <div class="img-container play-on-hover">
+            <div class="img-container">
               <img class="index-image" src="<%= move.img %>">
             </div>
           </div>
