Working on hamburger menu

--- a/public/show.css
+++ b/public/show.css
@@ -292,6 +292,8 @@ body {
     justify-content: center;
     align-items: center;
     background-color: whitesmoke;
+    width: 60%;
+    margin: 0 auto;
 }
 
 p {
