--- a/views/move/partials/head.ejs
+++ b/views/move/partials/head.ejs
@@ -19,7 +19,7 @@
                 <i class="fa-brands fa-square-github" style="color: #f0a925;"></i>
             </a>
         </div>
-        <div class="hamburger-menu">
+        <!-- <div class="hamburger-menu"> -->
             <div></div>
             <div></div>
             <div></div>
