--- a/views/move/partials/head.ejs
+++ b/views/move/partials/head.ejs
@@ -11,7 +11,7 @@
     <!-- Linking Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-REjxEn8sgD7uNQIt5faY7HHk4Zgg1Jr7GJUdjqTmElMdTKjsfK/b/iKYbUKRA7nulm5K8zmGTLakjvsRHrZgrw==" crossorigin="anonymous" />
 </head>
-<body>
+<!-- <body>
     <div class="navbar">
         <a href="/move">MoveOn</a>
         <div class="navbar-links">
@@ -19,7 +19,7 @@
                 <i class="fa-brands fa-square-github" style="color: #f0a925;"></i>
             </a>
         </div>
-        <!-- <div class="hamburger-menu"> -->
+        <div class="hamburger-menu">
             <div></div>
             <div></div>
             <div></div>
@@ -27,7 +27,7 @@
         <div class="hamburger-menu-close">
         </div>
     </div>
-</body>
+</body> -->
 <script>
    $(document).ready(function() {
       $('.hamburger-menu').click(function() {
